fixed some flexbox issues

--- a/Board_shop_styles/stylesInfo.css
+++ b/Board_shop_styles/stylesInfo.css
@@ -34,6 +34,8 @@ section#windsurfing{
 
 .flex-container {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
   }
   
   .flex-container > div {
