--- a/Board_shop_styles/styles.css
+++ b/Board_shop_styles/styles.css
@@ -78,9 +78,17 @@ div#tip{
 }
 
 div#indexpics{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
     margin-top: 10px;
     border-style:solid;
     border-color: black;
     padding: 10px;
 }
 
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
