--- a/Board_shop_styles/stylesShop.css
+++ b/Board_shop_styles/stylesShop.css
@@ -1,5 +1,6 @@
 .flex-container {
     display: flex;
+    flex-wrap: nowrap;
     background-image: url('../pictures/shop/shopItemBackground.jpg');
     margin-top: 10px;
     border-style:solid;
