minor background color changes

--- a/Board_shop_styles/stylesRecentlyAdded.css
+++ b/Board_shop_styles/stylesRecentlyAdded.css
@@ -29,6 +29,7 @@
     border-style:solid;
     border-color: white;
     color: white;
+    background-color: #00000066;
   }
 
   div#type{
@@ -40,6 +41,7 @@
     border-style:solid;
     border-color: white;
     color: white;
+    background-color: #00000066;
   }
 
   div#info{
@@ -50,4 +52,5 @@
     border-style:solid;
     border-color: white;
     color: white;
+    background-color: #00000066;
   }
