--- a/Board_shop_styles/stylesShop.css
+++ b/Board_shop_styles/stylesShop.css
@@ -34,6 +34,7 @@
     border-color: white;
     color: white;
     font-weight: bold;
+    background-color: #00000066;
   }
 
   div#type{
@@ -46,6 +47,7 @@
     border-color: white;
     color: white;
     font-weight: bold;
+    background-color: #00000066;
   }
 
   div#info{
@@ -58,6 +60,7 @@
     border-color: white;
     color: white;
     font-weight: bold;
+    background-color: #00000066;
   }
 
   div#seller{
@@ -70,6 +73,7 @@
     border-color: white;
     color: white;
     font-weight: bold;
+    background-color: #00000066;
   }
 
   div#price{
@@ -82,6 +86,7 @@
     border-color: black;
     color: black;
     font-weight: bolder;
+    background-color: #ffffff66;
   }
 
   div#price:hover{
